fix(bugfix): index content gap

--- a/src/pages/ContentIndex/ContentIndex.css
+++ b/src/pages/ContentIndex/ContentIndex.css
@@ -215,7 +215,7 @@
   padding: 20px;
   float: right;
   width: 70%;
-  top: 1500px;
+  top: 1550px;
   left: 25%;
     margin: 20px;
     border-radius: 50px;
